<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JoinIt</string>
    <string name="action_settings">Settings</string>
    <string name="button_facebook">Registreren met facebook</string>
    <string name="button_register">Registreren met email</string>
    <string name="button_login">Aanmelden</string>
    <string name="title_activity_register">Register</string>
    <string name="edit_wachtwoord">Wachtwoord</string>
    <string name="edit_wachtwoord_herhaal">Herhaal wachtwoord</string>
    <string name="edit_email">E-mail</string>
    <string name="button_bevestig">Bevestig</string>
    <string name="button_exit">Annuleer</string>

</resources>
