<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|bottom"
    android:orientation="vertical"
    android:background="@drawable/bg1" >

    
    
    <LinearLayout 
        android:gravity="center|top"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        >
        
        <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@+id/img_logo"
        android:src="@drawable/harry" />
        
    </LinearLayout>
    
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center|bottom"
    android:layout_marginBottom="30dp"
    android:orientation="vertical"
        >
        <Button
        android:id="@+id/btn_facebook"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/button_facebook"
        android:typeface="sans"
        android:textStyle="italic" />
    
    <Button
        android:id="@+id/btn_register"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/button_register"
        android:typeface="monospace"
        android:textStyle="italic"  />
    
    <Button
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:id="@+id/btn_login"
        android:textStyle="italic" 
	/>
         
    </LinearLayout>
    
    
    
    

</LinearLayout>